# libmonospaceif

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config-subst.m4  config.default.mk  config.macports.mk  configuration-options.md  configuration-options.txt  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  control  copyright  rules  watch
doc/: changelog.xml  configuration-options.txt  configuration-options.xml  create-mds.sh  create-txts.sh
src/: libmonospaceif.pc.in
src/cell_interface/: Makefile  Makefile.am  cell_interface.c  cell_interface.h
src/locales/: Makefile  fr_FR.txt  libcellif_locales.c  libcellif_locales.h  libmonospaceif_locales.c  libmonospaceif_locales.h  locale_setup.c
src/locales/de_DE/: libcellif_i18n.txt
src/locales/en_US/: libcellif_i18n.txt
src/locales/fr_FR/: libcellif_i18n.txt
src/monospace_interface/: Makefile.am  Makefile.in  monospace_interface.c  monospace_interface.h
src/screen_interface/: screen_cell_interface.h  screen_monospace_interface.h
